centos-7-x86_64 kickstart file updated: disable EPEL repository after dkms install.

--- a/http/centos-7-x86_64.ks.cfg
+++ b/http/centos-7-x86_64.ks.cfg
@@ -87,4 +87,7 @@ sed -i "s/^.*requiretty/# Defaults requiretty/" /etc/sudoers
 
 # disable unnecessary services
 systemctl disable kdump.service
+
+# disable EPEL repository
+sed -i -e '/\[epel\]/,/^\[/s/enabled=1/enabled=0/' /etc/yum.repos.d/epel.repo
 %end
