Repository structure refactoring:
- CloudLinux 6.8 templates moved into cloudlinux-6.8.json file
- CloudLinux 7.2 templates moved into cloudlinux-7.2.json file
- Use official CloudLinux channels instead of internal repositories
  for packages installation
- CentOS templates temporary removed

--- a/http/cloudlinux-6.8-i386.opennebula.ks.cfg
+++ b/http/cloudlinux-6.8-i386.opennebula.ks.cfg
@@ -1,6 +1,5 @@
 install
-url --url http://koji.cloudlinux.com/cloudlinux/7/os/x86_64/
-repo --name=updates --baseurl=http://koji.cloudlinux.com/cloudlinux/7/updates/x86_64/
+url --url http://repo.cloudlinux.com/cloudlinux/6.8/install/i386/
 
 lang en_US.UTF-8
 keyboard us
@@ -21,44 +20,47 @@ skipx
 clearpart --all --initlabel
 zerombr
 bootloader --location=mbr
-part / --fstype ext4 --size=1100 --grow --asprimary
+part / --fstype ext3 --size=1100 --grow --asprimary
 
 firstboot --disabled
 reboot
 
-%packages
+%packages --nobase --excludedocs
 @Core
 ntp
 ntpdate
 openssh-clients
 sudo
-# don't install unnecessary software
--alsa*
--plymouth*
--NetworkManager*
-# don't install unnecessary firmware
+# don't install unnecessary software and firmware
+-lve-stats
+-lve-utils
+-aic94xx-firmware
+-atmel-firmware
+-bfa-firmware
+-ipw2100-firmware
+-ipw2200-firmware
 -ivtv-firmware
--iwl100-firmware
--iwl105-firmware
--iwl135-firmware
 -iwl1000-firmware
--iwl2000-firmware
--iwl2030-firmware
--iwl3160-firmware
 -iwl3945-firmware
 -iwl4965-firmware
 -iwl5000-firmware
 -iwl5150-firmware
 -iwl6000-firmware
--iwl6000g2a-firmware
--iwl6000g2b-firmware
 -iwl6050-firmware
--iwl7260-firmware
--iwl7265-firmware
+-libertas-usb8388-firmware
+-ql2100-firmware
+-ql2200-firmware
+-ql23xx-firmware
+-ql2400-firmware
+-ql2500-firmware
+-rt61pci-firmware
+-rt73usb-firmware
+-xorg-x11-drv-ati-firmware
+-zd1211-firmware
 %end
 
 
 %post
 # disable unnecessary services
-systemctl disable kdump.service
+# systemctl disable kdump.service
 %end
