--- a/http/cloudlinux-6.8-i386.vagrant.ks.cfg
+++ b/http/cloudlinux-6.8-i386.vagrant.ks.cfg
@@ -1,9 +1,5 @@
 install
-url --url http://mirror.centos.org/centos/6/os/i386/
-repo --name=updates --baseurl=http://mirror.centos.org/centos/6/updates/i386/
-# dkms package from EPEL is needed for correct VirtualBox Guest Additions
-# installation, without dkms they will become broken after kernel upgrade
-repo --name=epel --baseurl=https://dl.fedoraproject.org/pub/epel/6/i386/
+url --url http://repo.cloudlinux.com/cloudlinux/6.8/install/i386/
 
 lang en_US.UTF-8
 keyboard us
@@ -18,10 +14,7 @@ services --enabled="sshd,ntpd,ntpdate"
 
 rootpw vagrant
 
-# create vagrant group, user will be created in %post section due to --gid
-# processing bug (see RHEL 7 installation guide for details).
-group --name=vagrant --gid=1666
-# user --name=vagrant --groups=wheel --password=vagrant --plaintext --uid=1666 --gid=1666
+group --name=vagrant
 
 text
 skipx
@@ -43,8 +36,6 @@ reboot
 %packages --nobase --excludedocs
 @Core
 bzip2
-dkms
-gcc
 kernel-devel
 kernel-headers
 ntp
@@ -53,6 +44,8 @@ openssh-clients
 perl
 sudo
 # don't install unnecessary software and firmware
+-lve-stats
+-lve-utils
 -aic94xx-firmware
 -atmel-firmware
 -bfa-firmware
@@ -60,13 +53,11 @@ sudo
 -ipw2200-firmware
 -ivtv-firmware
 -iwl1000-firmware
--iwl100-firmware
 -iwl3945-firmware
 -iwl4965-firmware
 -iwl5000-firmware
 -iwl5150-firmware
 -iwl6000-firmware
--iwl6000g2a-firmware
 -iwl6050-firmware
 -libertas-usb8388-firmware
 -ql2100-firmware
@@ -83,7 +74,7 @@ sudo
 
 %post
 # create vagrant user
-useradd vagrant -g vagrant -G wheel -u 1666
+useradd -g vagrant -G wheel vagrant
 echo "vagrant" | passwd --stdin vagrant
 
 # allow vagrant user to run everything without a password
