--- a/http/cloudlinux-6.8-x86_64.vagrant.ks.cfg
+++ b/http/cloudlinux-6.8-x86_64.vagrant.ks.cfg
@@ -1,6 +1,5 @@
 install
-url --url http://koji.cloudlinux.com/cloudlinux/6/os/x86_64/
-repo --name=updates --baseurl=http://koji.cloudlinux.com/cloudlinux/6/updates/x86_64/
+url --url http://repo.cloudlinux.com/cloudlinux/6.8/install/x86_64/
 
 lang en_US.UTF-8
 keyboard us
@@ -15,10 +14,7 @@ services --enabled="sshd,ntpd,ntpdate"
 
 rootpw vagrant
 
-# create vagrant group, user will be created in %post section due to --gid
-# processing bug (see RHEL 7 installation guide for details).
-group --name=vagrant --gid=1666
-# user --name=vagrant --groups=wheel --password=vagrant --plaintext --uid=1666 --gid=1666
+group --name=vagrant
 
 text
 skipx
@@ -40,8 +36,6 @@ reboot
 %packages --nobase --excludedocs
 @Core
 bzip2
-dkms
-gcc
 kernel-devel
 kernel-headers
 ntp
@@ -80,7 +74,7 @@ sudo
 
 %post
 # create vagrant user
-useradd vagrant -g vagrant -G wheel -u 1666
+useradd -g vagrant -G wheel vagrant
 echo "vagrant" | passwd --stdin vagrant
 
 # allow vagrant user to run everything without a password
