--- a/http/cloudlinux-7.2-x86_64.vagrant.ks.cfg
+++ b/http/cloudlinux-7.2-x86_64.vagrant.ks.cfg
@@ -1,9 +1,5 @@
 install
-url --url http://mirror.centos.org/centos/7/os/x86_64/
-repo --name=updates --baseurl=http://mirror.centos.org/centos/7/updates/x86_64/
-# dkms package from EPEL is needed for correct VirtualBox Guest Additions
-# installation, without dkms they will become broken after kernel upgrade
-repo --name=epel --baseurl=https://dl.fedoraproject.org/pub/epel/7/x86_64/
+url --url http://repo.cloudlinux.com/cloudlinux/7.2/install/x86_64/
 
 lang en_US.UTF-8
 keyboard us
@@ -18,10 +14,7 @@ services --enabled="sshd,ntpd,ntpdate"
 
 rootpw vagrant
 
-# create vagrant group, user will be created in %post section due to --gid
-# processing bug (see RHEL 7 installation guide for details).
-group --name=vagrant --gid=1666
-# user --name=vagrant --groups=wheel --password=vagrant --plaintext --uid=1666 --gid=1666
+group --name=vagrant
 
 text
 skipx
@@ -40,17 +33,16 @@ logvol swap --fstype swap --name=swap_spv --vgname=svg --recommended
 firstboot --disabled
 reboot
 
-%packages
+%packages --nobase --excludedocs
 @Core
 bzip2
 gcc
+gcc-c++
 kernel-devel
 kernel-headers
-ntp
+openssh-clients
 ntpdate
 sudo
-epel-release
-dkms
 # don't install unnecessary firmware
 -ivtv-firmware
 -iwl100-firmware
@@ -75,7 +67,7 @@ dkms
 
 %post
 # create vagrant user
-useradd vagrant -g vagrant -G wheel -u 1666
+useradd -g vagrant -G wheel vagrant
 echo "vagrant" | passwd --stdin vagrant
 
 # allow vagrant user to run everything without a password
@@ -87,7 +79,4 @@ sed -i "s/^.*requiretty/# Defaults requiretty/" /etc/sudoers
 
 # disable unnecessary services
 systemctl disable kdump.service
-
-# disable EPEL repository
-sed -i -e '/\[epel\]/,/^\[/s/enabled=1/enabled=0/' /etc/yum.repos.d/epel.repo
 %end
