CloudLinux 7.2 Vagrant (VirtualBox) kickstart file updated:
- use default partitioning scheme
- set "UseDNS no" in the sshd_config

--- a/http/cloudlinux-7.2-x86_64.vagrant.ks.cfg
+++ b/http/cloudlinux-7.2-x86_64.vagrant.ks.cfg
@@ -22,13 +22,7 @@ skipx
 clearpart --all --initlabel
 zerombr
 bootloader --location=mbr
-part /boot --ondisk=sda --fstype ext4 --size=512 --asprimary
-# sometimes I need to create additional partitions with different filesystem
-# or mount options, so I use only 10GB for /.
-part pv.01 --size=1 --grow --ondisk=sda
-volgroup svg pv.01
-logvol / --fstype ext4 --name=root_spv --vgname=svg --size=10240
-logvol swap --fstype swap --name=swap_spv --vgname=svg --recommended
+autopart
 
 firstboot --disabled
 reboot
@@ -76,6 +70,9 @@ echo "vagrant     ALL=(ALL)     NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
 # see Vagrant documentation (https://docs.vagrantup.com/v2/boxes/base.html)
 # for details about the requiretty.
 sed -i "s/^.*requiretty/# Defaults requiretty/" /etc/sudoers
+
+# don't perform a reverse DNS lookup on the connecting SSH client
+sed -i "s/#UseDNS yes/UseDNS no/" /etc/ssh/sshd_config
 
 # disable unnecessary services
 systemctl disable kdump.service
