Predictable Network Interface Names disabled for CloudLinux 7.2 x86_64 Vagrant box by adding "net.ifnames=0" to the GRUB_CMDLINE_LINUX to avoid #7427 Vagrant issue.

--- a/http/cloudlinux-7.2-x86_64.vagrant.ks.cfg
+++ b/http/cloudlinux-7.2-x86_64.vagrant.ks.cfg
@@ -21,7 +21,7 @@ skipx
 
 clearpart --all --initlabel
 zerombr
-bootloader --location=mbr
+bootloader --location=mbr --append="net.ifnames=0"
 autopart
 
 firstboot --disabled
