CloudLinux 7.2 x86_64 template updated:
- added install_acpid.sh provisioner which installs and enables
  acpid daemon.
- predictable network interface names disabled by adding
  "net.ifnames=0" to the GRUB_CMDLINE_LINUX to avoid #7427 Vagrant
  issue.

cleanup_vm.sh provisioner updated to delete previous kernel versions.

--- a/http/cloudlinux-7.2-x86_64.opennebula.ks.cfg
+++ b/http/cloudlinux-7.2-x86_64.opennebula.ks.cfg
@@ -19,7 +19,7 @@ skipx
 
 clearpart --all --initlabel
 zerombr
-bootloader --location=mbr
+bootloader --location=mbr --append="net.ifnames=0"
 part / --fstype ext4 --size=1200 --grow --asprimary
 
 firstboot --disabled
