CentOS 7.2 OpenNebula kickstart file updated:
- install bind-utils by default since it's required for hostname
  lookup on the first boot
- install rsync by default for better Vagrant compatibility
- disable "requiretty" in /etc/sudoers for better Vagrant
  compatibility

--- a/http/centos-7.2-x86_64.opennebula.ks.cfg
+++ b/http/centos-7.2-x86_64.opennebula.ks.cfg
@@ -29,9 +29,11 @@ reboot
 %packages --nobase --excludedocs
 @Core
 acpid
+bind-utils
 ntp
 ntpdate
 openssh-clients
+rsync
 sudo
 # don't install unnecessary software
 -alsa*
@@ -60,6 +62,10 @@ sudo
 
 
 %post
+# see Vagrant documentation (https://docs.vagrantup.com/v2/boxes/base.html)
+# for details about the requiretty.
+sed -i "s/^.*requiretty/# Defaults requiretty/" /etc/sudoers
+
 # disable unnecessary services
 systemctl disable kdump.service
 %end
